# Stratification

./: .gitignore  Stratify.hs  stratify.cabal
Stratify/: Html.hs  Internal.hs  Json.hs  Types.hs
Stratify/Input/: Hackage.hs
static/css/: stratify.css
